upgrade babel to 7

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,5 +23,10 @@
     "react/prop-types": "off",
     "react/require-default-props": "off",
     "react/default-props-match-prop-types": "off"
+  },
+  "settings": {
+    "react": {
+      "version": "16"
+    }
   }
 }
