--- a/package.json
+++ b/package.json
@@ -40,14 +40,15 @@
     "lodash.debounce": "^4.0.8"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.6",
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/preset-env": "^7.1.6",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
     "all-contributors-cli": "^5.4.1",
-    "babel-core": "^6.26.3",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
+    "babel-jest": "^23.6.0",
     "bundlesize": "^0.17.0",
     "cross-env": "^5.2.0",
     "enzyme": "^3.7.0",
@@ -72,7 +73,7 @@
     "release-it": "^8.0.0",
     "rimraf": "^2.6.2",
     "rollup": "^0.67.3",
-    "rollup-plugin-babel": "^3.0.7",
+    "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-flow": "^1.1.1",
     "rollup-plugin-json": "^3.1.0",
@@ -124,8 +125,8 @@
       "maxSize": "8kB"
     },
     {
-      "path": "./dist/forms.min.js",
-      "maxSize": "25kB"
+      "path": "./dist/forms.umd.min.js",
+      "maxSize": "30kB"
     }
   ]
 }
