--- a/.babelrc
+++ b/.babelrc
@@ -1,15 +1,11 @@
 {
   "env": {
-    "development": {
-      "plugins": ["transform-object-rest-spread"],
-      "presets": [["env", { "modules": false }], "react"]
-    },
-    "production": {
-      "plugins": ["transform-object-rest-spread"],
-      "presets": [["env", { "modules": false }], "react"]
-    },
     "test": {
-      "presets": [["env", { "node": "current" }], "react"]
+      "presets": [
+        ["@babel/preset-env", { "targets": { "node": "current" } }],
+        "@babel/preset-flow",
+        "@babel/preset-react"
+      ]
     }
   }
 }
