--- a/package.json
+++ b/package.json
@@ -127,5 +127,8 @@
       "path": "./dist/forms.umd.min.js",
       "maxSize": "30kB"
     }
-  ]
+  ],
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  }
 }
