--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
       "url": "https://github.com/jurajhrib"
     }
   ],
-  "main": "dist/forms.umd.js",
+  "main": "dist/forms.cjs.js",
   "jsnext:main": "dist/index.js",
   "module": "dist/index.js",
   "types": "dist/index.d.js",
@@ -44,7 +44,7 @@
   "devDependencies": {
     "@types/jest": "^23.3.9",
     "@types/lodash.debounce": "^4.0.4",
-    "@types/react": "^16.7.7",
+    "@types/react": "^16.7.17",
     "@types/yup": "^0.26.2",
     "all-contributors-cli": "^5.4.1",
     "bundlesize": "^0.17.0",
@@ -71,7 +71,7 @@
     "yup": "^0.26.6"
   },
   "peerDependencies": {
-    "react": ">=16.7.0-alpha || >=16.7.0",
+    "react": ">=16.7.0-alpha.2 || >=16.7.0",
     "yup": ">=0.26.6 <1.0.0"
   },
   "scripts": {
