--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@babel/preset-typescript": "^7.1.0",
     "@types/jest": "^24.0.4",
     "@types/lodash.debounce": "^4.0.4",
-    "@types/react": "^16.8.3",
+    "@types/react": "^16.8.5",
     "@types/yup": "^0.26.9",
     "@typescript-eslint/parser": "^1.3.0",
     "all-contributors-cli": "^5.4.1",
@@ -58,14 +58,15 @@
     "eslint-config-prettier": "^4.0.0",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react-hooks": "^1.0.2",
     "husky": "^1.3.1",
     "jest": "^24.1.0",
     "lint-staged": "^8.1.4",
     "prettier": "^1.16.4",
     "promise": "^8.0.2",
-    "react": "^16.8.2",
-    "react-dom": "^16.8.2",
-    "react-testing-library": "^5.8.0",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
+    "react-testing-library": "^6.0.0",
     "release-it": "^8.0.0",
     "rimraf": "^2.6.2",
     "rollup": "^0.67.3",
@@ -78,7 +79,7 @@
     "yup": "^0.26.10"
   },
   "peerDependencies": {
-    "react": ">=16.8.0",
+    "react": ">=16.8.3",
     "yup": ">=0.26.10 <1.0.0"
   },
   "scripts": {
@@ -93,11 +94,12 @@
     "size": "bundlesize",
     "test": "jest --watch",
     "test:ci": "jest --ci --coverage",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "typecheck:all": "tsc --noEmit -p tsconfig.all.json"
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
-      "tslint --fix",
+      "eslint --fix",
       "git add"
     ]
   },
