--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,15 +9,12 @@ jobs:
           CI: 1
     steps:
       - checkout
-      - restore_cache:
-          key: yarndeps-{{ .Branch }}-{{ checksum "yarn.lock" }}
+      - run:
+          name: Upgrade yarn
+          command: sudo npm install -g
       - run:
           name: Installing javascript dependencies
           command: yarn install --cache-folder ~/.yarn-cache
-      - save_cache:
-          key: yarndeps-{{ .Branch }}-{{ checksum "yarn.lock" }}
-          paths:
-            - ~/.yarn-cache
       - run:
           name: Linting the source code
           command: yarn lint
