--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@napred/forms",
   "description": "Easily built forms in React using Hooks API",
-  "version": "0.5.4",
+  "version": "0.6.0-beta.0",
   "license": "MIT",
   "keywords": [
     "form",
