--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
       "url": "https://github.com/jurajhrib"
     }
   ],
-  "main": "dist/forms.cjs.js",
+  "unpkg": "dist/index.umd.js",
+  "main": "dist/index.cjs.js",
   "jsnext:main": "dist/index.js",
   "module": "dist/index.js",
   "types": "dist/index.d.js",
@@ -37,46 +38,42 @@
     "src",
     "!__tests__"
   ],
-  "sideEffects": false,
   "dependencies": {
-    "lodash.debounce": "^4.0.8"
+    "@types/react": "^16.8.23"
   },
+  "sideEffects": false,
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/preset-env": "^7.3.1",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.1.0",
-    "@types/jest": "^24.0.4",
-    "@types/lodash.debounce": "^4.0.4",
-    "@types/react": "^16.8.5",
-    "@types/yup": "^0.26.9",
-    "@typescript-eslint/parser": "^1.3.0",
-    "all-contributors-cli": "^5.4.1",
-    "bundlesize": "^0.17.0",
-    "eslint": "^5.13.0",
-    "eslint-config-prettier": "^4.0.0",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.4",
-    "eslint-plugin-react-hooks": "^1.0.2",
-    "husky": "^1.3.1",
-    "jest": "^24.1.0",
-    "lint-staged": "^8.1.4",
-    "prettier": "^1.16.4",
-    "promise": "^8.0.2",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
-    "react-testing-library": "^6.0.0",
-    "release-it": "^8.0.0",
-    "rimraf": "^2.6.2",
-    "rollup": "^0.67.3",
-    "rollup-plugin-commonjs": "^9.2.0",
-    "rollup-plugin-node-resolve": "^3.4.0",
-    "rollup-plugin-replace": "^2.1.0",
-    "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-terser": "^3.0.0",
-    "typescript": "^3.3.3",
-    "yup": "^0.26.10"
+    "@babel/preset-typescript": "^7.3.3",
+    "@testing-library/react": "^8.0.6",
+    "@types/jest": "^24.0.15",
+    "@types/react": "^16.8.23",
+    "@types/yup": "^0.26.22",
+    "@typescript-eslint/parser": "^1.13.0",
+    "@typescript-eslint/eslint-plugin": "^1.13.0",
+    "all-contributors-cli": "^6.8.1",
+    "bundlesize": "^0.18.0",
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb-typescript": "^4.0.1",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.6.1",
+    "husky": "^3.0.1",
+    "jest": "^24.8.0",
+    "lint-staged": "^9.2.1",
+    "microbundle": "next",
+    "prettier": "^1.18.2",
+    "promise": "^8.0.3",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "release-it": "^12.3.4",
+    "rimraf": "^2.6.3",
+    "typescript": "^3.5.3",
+    "yup": "^0.27.0"
   },
   "peerDependencies": {
     "react": ">=16.8.3",
@@ -85,8 +82,8 @@
   "scripts": {
     "contributors:add": "all-contributors add",
     "contributors:generate": "all-contributors generate",
-    "build": "tsc && rollup -c",
-    "lint": "eslint src/**/*.{ts,tsx}",
+    "build": "microbundle --jsx React.createComponent",
+    "lint": "eslint \"src/**/*.{ts,tsx}\"",
     "lint-staged": "lint-staged",
     "prebuild": "rimraf dist",
     "prepublishOnly": "npm run build",
@@ -98,7 +95,11 @@
     "typecheck:all": "tsc --noEmit -p tsconfig.all.json"
   },
   "lint-staged": {
-    "src/**/*.{ts,tsx}": [
+    "*.json": [
+      "prettier --write",
+      "git add"
+    ],
+    "*.{ts,tsx}": [
       "eslint --fix",
       "git add"
     ]
@@ -110,7 +111,7 @@
   },
   "bundlesize": [
     {
-      "path": "./dist/forms.cjs.js",
+      "path": "./dist/index.cjs.js",
       "maxSize": "8kB"
     },
     {
