--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "contributors:add": "all-contributors add",
     "contributors:generate": "all-contributors generate",
     "build": "microbundle --jsx React.createComponent",
-    "lint": "eslint \"src/**/*.{ts,tsx}\"",
+    "lint": "eslint --fix \"src/**/*.{ts,tsx}\"",
     "lint-staged": "lint-staged",
     "prebuild": "rimraf dist",
     "prepublishOnly": "npm run build",
