add bundlesize to build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,13 +5,8 @@ jobs:
     working_directory: ~/forms
     docker:
       - image: circleci/node:10.15.0
-        environment:
-          CI: 1
     steps:
       - checkout
-      - run:
-          name: Upgrade yarn
-          command: sudo npm install -g yarn
       - run:
           name: Installing javascript dependencies
           command: yarn install --cache-folder ~/.yarn-cache
@@ -24,6 +19,11 @@ jobs:
       - run:
           name: Testing the source code
           command: yarn test:ci
+      - run:
+          name: Bundlesize
+          command: |
+            yarn build
+            yarn bundlesize
 
 workflows:
   version: 2
