--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,9 +7,15 @@ jobs:
       - image: circleci/node:10.15.0
     steps:
       - checkout
+      - restore_cache:
+          key: yarndeps-{{ .Branch }}-{{ checksum "yarn.lock" }}
       - run:
           name: Installing javascript dependencies
           command: yarn install --cache-folder ~/.yarn-cache
+      - save_cache:
+          key: yarndeps-{{ .Branch }}-{{ checksum "yarn.lock" }}
+          paths:
+            - ~/.yarn-cache
       - run:
           name: Linting the source code
           command: yarn lint
