--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@byteclaw/forms",
   "description": "Easily built forms in React using Hooks API",
-  "version": "0.9.0",
+  "version": "1.0.0-alpha.0",
   "license": "MIT",
   "keywords": [
     "form",
