emit modern bundle with js extension

--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
   ],
   "unpkg": "dist/index.umd.js",
   "main": "dist/index.js",
-  "jsnext:main": "dist/index.modern.mjs",
-  "module": "dist/index.modern.mjs",
+  "jsnext:main": "dist/index.modern.js",
+  "module": "dist/index.modern.js",
   "types": "dist/index.d.js",
   "files": [
     "dist",
@@ -53,8 +53,8 @@
     "@testing-library/react": "^8.0.6",
     "@types/jest": "^24.0.15",
     "@types/react": "^16.8.23",
-    "@typescript-eslint/parser": "^1.13.0",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
+    "@typescript-eslint/parser": "^1.13.0",
     "all-contributors-cli": "^6.8.1",
     "bundlesize": "^0.18.0",
     "eslint": "^6.1.0",
@@ -66,7 +66,7 @@
     "husky": "^3.0.1",
     "jest": "^24.8.0",
     "lint-staged": "^9.2.1",
-    "microbundle": "next",
+    "microbundle": "^0.12.0-next.6",
     "prettier": "^1.18.2",
     "promise": "^8.0.3",
     "react": "^16.8.6",
