--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
-    "@testing-library/react": "^8.0.6",
+    "@testing-library/react": "^9.1.3",
     "@types/jest": "^24.0.15",
     "@types/react": "^16.8.23",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
@@ -60,6 +60,8 @@
     "eslint": "^6.1.0",
     "eslint-config-airbnb-typescript": "^4.0.1",
     "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.6.1",
