--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,8 @@
     "import/export": "off",
     "import/no-cycle": "warn",
     "import/prefer-default-export": "off",
+    "jsx-a11y/control-has-associated-label": "off",
+    "react/jsx-props-no-spreading": "off",
     "react-hooks/rules-of-hooks": "error",
     "no-console": "off",
     "prefer-template": "off",
