--- a/package.json
+++ b/package.json
@@ -53,17 +53,17 @@
     "@testing-library/react": "^9.1.3",
     "@types/jest": "^24.0.15",
     "@types/react": "^16.8.23",
-    "@typescript-eslint/eslint-plugin": "^1.13.0",
-    "@typescript-eslint/parser": "^1.13.0",
+    "@typescript-eslint/eslint-plugin": "^2.16.0",
+    "@typescript-eslint/parser": "^2.16.0",
     "all-contributors-cli": "^6.8.1",
     "bundlesize": "^0.18.0",
     "eslint": "^6.1.0",
-    "eslint-config-airbnb-typescript": "^4.0.1",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-import": "^2.18.2",
+    "eslint-config-airbnb-typescript": "^6.3.1",
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.18.0",
     "eslint-plugin-react-hooks": "^1.6.1",
     "husky": "^3.0.1",
     "jest": "^24.8.0",
@@ -86,8 +86,8 @@
     "contributors:add": "all-contributors add",
     "contributors:generate": "all-contributors generate",
     "build": "microbundle --jsx React.createElement",
-    "lint": "eslint \"src/**/*.{ts,tsx}\"",
-    "lint:fix": "eslint --fix \"src/**/*.{ts,tsx}\"",
+    "lint": "eslint --ext ts,tsx src",
+    "lint:fix": "eslint --fix --ext ts,tsx src",
     "lint-staged": "lint-staged",
     "prebuild": "rimraf dist",
     "prepublishOnly": "npm run build",
